--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     ]
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^11.0.0"
+    "copy-webpack-plugin": "^11.0.0",
+    "gh-pages": "^5.0.0"
   }
 }
